--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,52 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "\n",
+    "memory = ConversationBufferWindowMemory(\n",
+    "  return_messages=True,\n",
+    "  k=4)\n",
+    "\n",
+    "def add_message(input, output):\n",
+    "  memory.save_context({\"input\":input}, {\"output\":output})\n",
+    "\n",
+    "add_message(1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(2, 2)\n",
+    "add_message(3, 3)\n",
+    "add_message(4, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='Hi'), AIMessage(content='How are you?')]}"
+       "{'history': [HumanMessage(content='1'),\n",
+       "  AIMessage(content='1'),\n",
+       "  HumanMessage(content='2'),\n",
+       "  AIMessage(content='2'),\n",
+       "  HumanMessage(content='3'),\n",
+       "  AIMessage(content='3'),\n",
+       "  HumanMessage(content='4'),\n",
+       "  AIMessage(content='4')]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.memory import ConversationBufferMemory\n",
-    "\n",
-    "memory = ConversationBufferMemory(return_messages=True)\n",
-    "\n",
-    "memory.save_context({\"input\":\"Hi\"}, {\"output\":\"How are you?\"})\n",
-    "\n",
     "memory.load_memory_variables({})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(5, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='Hi'),\n",
-       "  AIMessage(content='How are you?'),\n",
-       "  HumanMessage(content='Hi'),\n",
-       "  AIMessage(content='How are you?')]}"
+       "{'history': [HumanMessage(content='2'),\n",
+       "  AIMessage(content='2'),\n",
+       "  HumanMessage(content='3'),\n",
+       "  AIMessage(content='3'),\n",
+       "  HumanMessage(content='4'),\n",
+       "  AIMessage(content='4'),\n",
+       "  HumanMessage(content='5'),\n",
+       "  AIMessage(content='5')]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.save_context({\"input\":\"Hi\"}, {\"output\":\"How are you?\"})\n",
-    "\n",
     "memory.load_memory_variables({})"
    ]
   }
