--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,94 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "memory = ConversationBufferWindowMemory(\n",
-    "  return_messages=True,\n",
-    "  k=4)\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
+    "\n",
+    "memory = ConversationSummaryMemory(llm=llm)\n",
     "\n",
     "def add_message(input, output):\n",
     "  memory.save_context({\"input\":input}, {\"output\":output})\n",
     "\n",
-    "add_message(1, 1)"
+    "def get_history():\n",
+    "  return memory.load_memory_variables({})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_message(2, 2)\n",
-    "add_message(3, 3)\n",
-    "add_message(4, 4)"
+    "add_message(\"Hi, I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\"South Korea is so beautiful\", \"I wish I could go!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='1'),\n",
-       "  AIMessage(content='1'),\n",
-       "  HumanMessage(content='2'),\n",
-       "  AIMessage(content='2'),\n",
-       "  HumanMessage(content='3'),\n",
-       "  AIMessage(content='3'),\n",
-       "  HumanMessage(content='4'),\n",
-       "  AIMessage(content='4')]}"
+       "{'history': 'The human introduces themselves as Nicolas and mentions that they live in South Korea. The AI responds by expressing excitement and finding it cool. The human then mentions that South Korea is beautiful, to which the AI responds by expressing a desire to go there.'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(5, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content='2'),\n",
-       "  AIMessage(content='2'),\n",
-       "  HumanMessage(content='3'),\n",
-       "  AIMessage(content='3'),\n",
-       "  HumanMessage(content='4'),\n",
-       "  AIMessage(content='4'),\n",
-       "  HumanMessage(content='5'),\n",
-       "  AIMessage(content='5')]}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "memory.load_memory_variables({})"
+    "get_history()"
    ]
   }
  ],
