--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationSummaryMemory(llm=llm)\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "  llm=llm, \n",
+    "  max_token_limit=150, \n",
+    "  return_messages=True\n",
+    ")\n",
     "\n",
     "def add_message(input, output):\n",
     "  memory.save_context({\"input\":input}, {\"output\":output})\n",
@@ -22,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,30 +35,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"South Korea is so beautiful\", \"I wish I could go!!!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': 'The human introduces themselves as Nicolas and mentions that they live in South Korea. The AI responds by expressing excitement and finding it cool. The human then mentions that South Korea is beautiful, to which the AI responds by expressing a desire to go there.'}"
+       "{'history': [HumanMessage(content=\"Hi, I'm Nicolas, I live in South Korea\"),\n",
+       "  AIMessage(content='Wow that is so cool!')]}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content=\"Hi, I'm Nicolas, I live in South Korea\"),\n",
+       "  AIMessage(content='Wow that is so cool!'),\n",
+       "  HumanMessage(content='South Korea is so beautiful'),\n",
+       "  AIMessage(content='I wish I could go!!!')]}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_message(\"South Korea is so beautiful\", \"I wish I could go!!!\")\n",
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content=\"Hi, I'm Nicolas, I live in South Korea\"),\n",
+       "  AIMessage(content='Wow that is so cool!'),\n",
+       "  HumanMessage(content='South Korea is so beautiful'),\n",
+       "  AIMessage(content='I wish I could go!!!'),\n",
+       "  HumanMessage(content='How far is Korea from Argentina'),\n",
+       "  AIMessage(content=\"I don't know! Super far!\")]}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_message(\"How far is Korea from Argentina\", \"I don't know! Super far!\")\n",
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [SystemMessage(content='The human introduces themselves as Nicolas and mentions that they live in South Korea. The AI responds by expressing excitement and finding it cool.'),\n",
+       "  HumanMessage(content='South Korea is so beautiful'),\n",
+       "  AIMessage(content='I wish I could go!!!'),\n",
+       "  HumanMessage(content='How far is Korea from Argentina'),\n",
+       "  AIMessage(content=\"I don't know! Super far!\"),\n",
+       "  HumanMessage(content='How far is Korea from Brazil'),\n",
+       "  AIMessage(content=\"I don't know! Super far!\"),\n",
+       "  HumanMessage(content='How far is Korea from Brazil'),\n",
+       "  AIMessage(content=\"I don't know! Super far!\"),\n",
+       "  HumanMessage(content='How far is Korea from Brazil'),\n",
+       "  AIMessage(content=\"I don't know! Super far!\"),\n",
+       "  HumanMessage(content='How far is Korea from Brazil'),\n",
+       "  AIMessage(content=\"I don't know! Super far!\")]}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_message(\"How far is Korea from Brazil\", \"I don't know! Super far!\")\n",
     "get_history()"
    ]
   }
