--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "from langchain.memory import ConversationKGMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationSummaryBufferMemory(\n",
-    "  llm=llm, \n",
-    "  max_token_limit=150, \n",
+    "memory = ConversationKGMemory(\n",
+    "  llm=llm,\n",
     "  return_messages=True\n",
     ")\n",
     "\n",
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,106 +34,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi, I'm Nicolas, I live in South Korea\"),\n",
-       "  AIMessage(content='Wow that is so cool!')]}"
+       "{'history': [SystemMessage(content='On Nicolas: Nicolas is a person. Nicolas lives in South Korea.')]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_history()"
+    "memory.load_memory_variables({\"input\": \"who is Nocolas\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi, I'm Nicolas, I live in South Korea\"),\n",
-       "  AIMessage(content='Wow that is so cool!'),\n",
-       "  HumanMessage(content='South Korea is so beautiful'),\n",
-       "  AIMessage(content='I wish I could go!!!')]}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "add_message(\"South Korea is so beautiful\", \"I wish I could go!!!\")\n",
-    "get_history()"
+    "add_message(\"Nicolas likes kimchi\", \"Wow that is so cool!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi, I'm Nicolas, I live in South Korea\"),\n",
-       "  AIMessage(content='Wow that is so cool!'),\n",
-       "  HumanMessage(content='South Korea is so beautiful'),\n",
-       "  AIMessage(content='I wish I could go!!!'),\n",
-       "  HumanMessage(content='How far is Korea from Argentina'),\n",
-       "  AIMessage(content=\"I don't know! Super far!\")]}"
+       "{'history': [SystemMessage(content='On Nicolas: Nicolas is a person. Nicolas lives in South Korea. Nicolas likes kimchi.')]}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "add_message(\"How far is Korea from Argentina\", \"I don't know! Super far!\")\n",
-    "get_history()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [SystemMessage(content='The human introduces themselves as Nicolas and mentions that they live in South Korea. The AI responds by expressing excitement and finding it cool.'),\n",
-       "  HumanMessage(content='South Korea is so beautiful'),\n",
-       "  AIMessage(content='I wish I could go!!!'),\n",
-       "  HumanMessage(content='How far is Korea from Argentina'),\n",
-       "  AIMessage(content=\"I don't know! Super far!\"),\n",
-       "  HumanMessage(content='How far is Korea from Brazil'),\n",
-       "  AIMessage(content=\"I don't know! Super far!\"),\n",
-       "  HumanMessage(content='How far is Korea from Brazil'),\n",
-       "  AIMessage(content=\"I don't know! Super far!\"),\n",
-       "  HumanMessage(content='How far is Korea from Brazil'),\n",
-       "  AIMessage(content=\"I don't know! Super far!\"),\n",
-       "  HumanMessage(content='How far is Korea from Brazil'),\n",
-       "  AIMessage(content=\"I don't know! Super far!\")]}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "add_message(\"How far is Korea from Brazil\", \"I don't know! Super far!\")\n",
-    "get_history()"
+    "memory.load_memory_variables({\"input\": \"what does nicolas like\"})"
    ]
   }
  ],
