--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,83 +2,165 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.memory import ConversationKGMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationKGMemory(\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "  llm=llm, \n",
+    "  max_token_limit=120,\n",
+    "  memory_key=\"chat_history\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = \"\"\"\n",
+    "  You are a helpful AI talking to a human.\n",
+    "  {chat_history}\n",
+    "  Human:{question}\n",
+    "  You:\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "  You are a helpful AI talking to a human.\n",
+      "  \n",
+      "  Human:My name is Yuls\n",
+      "  You:\n",
+      "\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Yuls! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain = LLMChain(\n",
     "  llm=llm,\n",
-    "  return_messages=True\n",
+    "  memory=memory,\n",
+    "  prompt=PromptTemplate.from_template(template),\n",
+    "  verbose=True,\n",
     ")\n",
     "\n",
-    "def add_message(input, output):\n",
-    "  memory.save_context({\"input\":input}, {\"output\":output})\n",
-    "\n",
-    "def get_history():\n",
-    "  return memory.load_memory_variables({})"
+    "chain.predict(question=\"My name is Yuls\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"Hi, I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "  You are a helpful AI talking to a human.\n",
+      "  Human: My name is Yuls\n",
+      "AI: Hello Yuls! How can I assist you today?\n",
+      "  Human:I live in Seoul\n",
+      "  You:\n",
+      "\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas is a person. Nicolas lives in South Korea.')]}"
+       "\"That's great! Seoul is a vibrant and bustling city. How can I assist you today, Yuls?\""
       ]
      },
-     "execution_count": 36,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({\"input\": \"who is Nocolas\"})"
+    "chain.predict(question=\"I live in Seoul\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"Nicolas likes kimchi\", \"Wow that is so cool!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "  You are a helpful AI talking to a human.\n",
+      "  Human: My name is Yuls\n",
+      "AI: Hello Yuls! How can I assist you today?\n",
+      "Human: I live in Seoul\n",
+      "AI: That's great! Seoul is a vibrant and bustling city. How can I assist you today, Yuls?\n",
+      "  Human:what is my name?\n",
+      "  You:\n",
+      "\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas is a person. Nicolas lives in South Korea. Nicolas likes kimchi.')]}"
+       "'Your name is Yuls.'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({\"input\": \"what does nicolas like\"})"
+    "chain.predict(question=\"what is my name?\")"
    ]
   }
  ],
