--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,42 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.chains import LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
     "memory = ConversationSummaryBufferMemory(\n",
     "  llm=llm, \n",
     "  max_token_limit=120,\n",
-    "  memory_key=\"chat_history\"\n",
+    "  memory_key=\"chat_history\",\n",
+    "  return_messages=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = \"\"\"\n",
-    "  You are a helpful AI talking to a human.\n",
-    "  {chat_history}\n",
-    "  Human:{question}\n",
-    "  You:\n",
-    "\n",
-    "\"\"\""
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You are a helpful AI talking to a human\"),\n",
+    "  MessagesPlaceholder(variable_name=\"chat_history\"),\n",
+    "  (\"human\", \"{question}\")\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -48,13 +47,8 @@
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "  You are a helpful AI talking to a human.\n",
-      "  \n",
-      "  Human:My name is Yuls\n",
-      "  You:\n",
-      "\n",
-      "\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
+      "Human: My name is Yuls\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -65,7 +59,7 @@
        "'Hello Yuls! How can I assist you today?'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +68,7 @@
     "chain = LLMChain(\n",
     "  llm=llm,\n",
     "  memory=memory,\n",
-    "  prompt=PromptTemplate.from_template(template),\n",
+    "  prompt=prompt,\n",
     "  verbose=True,\n",
     ")\n",
     "\n",
@@ -83,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -94,14 +88,10 @@
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "  You are a helpful AI talking to a human.\n",
-      "  Human: My name is Yuls\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
+      "Human: My name is Yuls\n",
       "AI: Hello Yuls! How can I assist you today?\n",
-      "  Human:I live in Seoul\n",
-      "  You:\n",
-      "\n",
-      "\u001b[0m\n",
+      "Human: I live in Seoul\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -109,10 +99,10 @@
     {
      "data": {
       "text/plain": [
-       "\"That's great! Seoul is a vibrant and bustling city. How can I assist you today, Yuls?\""
+       "\"That's great! Seoul is a vibrant and bustling city. How can I help you with anything related to Seoul or any other topic you have in mind?\""
       ]
      },
-     "execution_count": 54,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -134,16 +124,12 @@
       "\n",
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "  You are a helpful AI talking to a human.\n",
-      "  Human: My name is Yuls\n",
+      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
+      "Human: My name is Yuls\n",
       "AI: Hello Yuls! How can I assist you today?\n",
       "Human: I live in Seoul\n",
-      "AI: That's great! Seoul is a vibrant and bustling city. How can I assist you today, Yuls?\n",
-      "  Human:what is my name?\n",
-      "  You:\n",
-      "\n",
-      "\u001b[0m\n",
+      "AI: That's great! Seoul is a vibrant and bustling city. How can I help you with anything related to Seoul or any other topic you have in mind?\n",
+      "Human: what is my name?\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -151,10 +137,10 @@
     {
      "data": {
       "text/plain": [
-       "'Your name is Yuls.'"
+       "'Your name is Yuls, as you mentioned earlier. Is there anything specific you would like to know or discuss?'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
