--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.chains import LLMChain\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
     "from langchain.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
@@ -16,138 +16,61 @@
     "memory = ConversationSummaryBufferMemory(\n",
     "  llm=llm, \n",
     "  max_token_limit=120,\n",
-    "  memory_key=\"chat_history\",\n",
     "  return_messages=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You are a helpful AI talking to a human\"),\n",
-    "  MessagesPlaceholder(variable_name=\"chat_history\"),\n",
-    "  (\"human\", \"{question}\")\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
-      "Human: My name is Yuls\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Hello Yuls! How can I assist you today?'"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain = LLMChain(\n",
-    "  llm=llm,\n",
-    "  memory=memory,\n",
-    "  prompt=prompt,\n",
-    "  verbose=True,\n",
     ")\n",
     "\n",
-    "chain.predict(question=\"My name is Yuls\")"
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You are a helpful AI talking to a human\"),\n",
+    "  MessagesPlaceholder(variable_name=\"history\"),\n",
+    "  (\"human\", \"{question}\")\n",
+    "])\n",
+    "\n",
+    "def load_memory(input):\n",
+    "  print(input)\n",
+    "  return memory.load_memory_variables({})[\"history\"]\n",
+    "\n",
+    "\n",
+    "chain = RunnablePassthrough.assign(history=load_memory) | prompt | llm\n",
+    "\n",
+    "def ask(question):\n",
+    "  result = chain.invoke({\n",
+    "    \"question\": question,\n",
+    "  })\n",
+    "  memory.save_context({\"input\": question}, {\"output\": result.content})\n",
+    "  print(result)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
-      "Human: My name is Yuls\n",
-      "AI: Hello Yuls! How can I assist you today?\n",
-      "Human: I live in Seoul\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "{'question': 'My naem is Yuls.'}\n",
+      "content='Hello Yuls! How can I assist you today?'\n",
+      "{'question': 'I live in Seoul.'}\n",
+      "content=\"That's great! Seoul is a vibrant and bustling city. How can I help you with anything related to Seoul or any other topic?\"\n",
+      "{'question': 'What is my name?'}\n",
+      "content='Your name is Yuls, as you mentioned earlier. Is there anything specific you would like to know or discuss?'\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"That's great! Seoul is a vibrant and bustling city. How can I help you with anything related to Seoul or any other topic you have in mind?\""
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.predict(question=\"I live in Seoul\")"
+    "ask(\"My naem is Yuls.\")\n",
+    "ask(\"I live in Seoul.\")\n",
+    "ask(\"What is my name?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
-      "Prompt after formatting:\n",
-      "\u001b[32;1m\u001b[1;3mSystem: You are a helpful AI talking to a human\n",
-      "Human: My name is Yuls\n",
-      "AI: Hello Yuls! How can I assist you today?\n",
-      "Human: I live in Seoul\n",
-      "AI: That's great! Seoul is a vibrant and bustling city. How can I help you with anything related to Seoul or any other topic you have in mind?\n",
-      "Human: what is my name?\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Your name is Yuls, as you mentioned earlier. Is there anything specific you would like to know or discuss?'"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain.predict(question=\"what is my name?\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
