--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,67 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain.document_loaders import TextLoader\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0.1)\n",
+    "# llm = ChatOpenAI(temperature=0.1,)\n",
     "\n",
-    "memory = ConversationSummaryBufferMemory(\n",
-    "  llm=llm, \n",
-    "  max_token_limit=120,\n",
-    "  return_messages=True,\n",
-    ")\n",
+    "loader = TextLoader(\"./files/chapter_one.txt\")\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You are a helpful AI talking to a human\"),\n",
-    "  MessagesPlaceholder(variable_name=\"history\"),\n",
-    "  (\"human\", \"{question}\")\n",
-    "])\n",
-    "\n",
-    "def load_memory(input):\n",
-    "  print(input)\n",
-    "  return memory.load_memory_variables({})[\"history\"]\n",
-    "\n",
-    "\n",
-    "chain = RunnablePassthrough.assign(history=load_memory) | prompt | llm\n",
-    "\n",
-    "def ask(question):\n",
-    "  result = chain.invoke({\n",
-    "    \"question\": question,\n",
-    "  })\n",
-    "  memory.save_context({\"input\": question}, {\"output\": result.content})\n",
-    "  print(result)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'question': 'My naem is Yuls.'}\n",
-      "content='Hello Yuls! How can I assist you today?'\n",
-      "{'question': 'I live in Seoul.'}\n",
-      "content=\"That's great! Seoul is a vibrant and bustling city. How can I help you with anything related to Seoul or any other topic?\"\n",
-      "{'question': 'What is my name?'}\n",
-      "content='Your name is Yuls, as you mentioned earlier. Is there anything specific you would like to know or discuss?'\n"
-     ]
-    }
-   ],
-   "source": [
-    "ask(\"My naem is Yuls.\")\n",
-    "ask(\"I live in Seoul.\")\n",
-    "ask(\"What is my name?\")"
+    "loader.load()"
    ]
   },
   {
@@ -70,7 +21,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain.document_loaders import UnstructuredFileLoader\n",
+    "\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
+    "loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NLTK download SSL certificate error case\n",
+    "\n",
+    "import nltk\n",
+    "import ssl\n",
+    "\n",
+    "try:\n",
+    "    _create_unverified_https_context = ssl._create_unverified_context\n",
+    "except AttributeError:\n",
+    "    pass\n",
+    "else:\n",
+    "    ssl._create_default_https_context = _create_unverified_https_context\n",
+    "\n",
+    "nltk.download()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "splitter = RecursiveCharacterTextSplitter(\n",
+    "  chunk_size=200,\n",
+    "  chunk_overlap=50\n",
+    ")\n",
+    "\n",
+    "loader = TextLoader(\"./files/chapter_one.txt\")\n",
+    "\n",
+    "loader.load_and_split(text_splitter=splitter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "\n",
+    "splitter = CharacterTextSplitter(\n",
+    "  separator=\"\\n\",\n",
+    "  chunk_size=600,\n",
+    "  chunk_overlap=100\n",
+    ")\n",
+    "\n",
+    "loader = TextLoader(\"./files/chapter_one.txt\")\n",
+    "\n",
+    "loader.load_and_split(text_splitter=splitter)"
+   ]
   }
  ],
  "metadata": {
