--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,82 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.document_loaders import TextLoader\n",
-    "\n",
-    "# llm = ChatOpenAI(temperature=0.1,)\n",
-    "\n",
-    "loader = TextLoader(\"./files/chapter_one.txt\")\n",
-    "\n",
-    "loader.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from langchain.document_loaders import UnstructuredFileLoader\n",
-    "\n",
-    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
-    "loader.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NLTK download SSL certificate error case\n",
-    "\n",
-    "import nltk\n",
-    "import ssl\n",
-    "\n",
-    "try:\n",
-    "    _create_unverified_https_context = ssl._create_unverified_context\n",
-    "except AttributeError:\n",
-    "    pass\n",
-    "else:\n",
-    "    ssl._create_default_https_context = _create_unverified_https_context\n",
-    "\n",
-    "nltk.download()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "\n",
-    "splitter = RecursiveCharacterTextSplitter(\n",
-    "  chunk_size=200,\n",
-    "  chunk_overlap=50\n",
-    ")\n",
-    "\n",
-    "loader = TextLoader(\"./files/chapter_one.txt\")\n",
-    "\n",
-    "loader.load_and_split(text_splitter=splitter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "\n",
-    "splitter = CharacterTextSplitter(\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
     "  separator=\"\\n\",\n",
     "  chunk_size=600,\n",
-    "  chunk_overlap=100\n",
+    "  chunk_overlap=100,\n",
     ")\n",
     "\n",
-    "loader = TextLoader(\"./files/chapter_one.txt\")\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
     "\n",
     "loader.load_and_split(text_splitter=splitter)"
    ]
