--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,12 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1536"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "\n",
+    "embedder = OpenAIEmbeddings()\n",
+    "\n",
+    "vector = embedder.embed_query(\"Hi\")\n",
+    "\n",
+    "len(vector) # return vector dimension of word \"Hi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.document_loaders import UnstructuredFileLoader\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "from langchain.vectorstores import Chroma\n",
     "\n",
     "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
     "  separator=\"\\n\",\n",
@@ -16,8 +45,69 @@
     ")\n",
     "\n",
     "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
     "\n",
-    "loader.load_and_split(text_splitter=splitter)"
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "vectorstore = Chroma.from_documents(docs, embeddings)\n",
+    "\n",
+    "# cost whenever run embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = vectorstore.similarity_search(\"where does winston live?\")\n",
+    "len(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.document_loaders import UnstructuredFileLoader\n",
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
+    "from langchain.vectorstores import Chroma\n",
+    "from langchain.storage import LocalFileStore\n",
+    "\n",
+    "# create cache for embedding\n",
+    "\n",
+    "cache_dir = LocalFileStore(\"./.cache/\")\n",
+    "\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "  separator=\"\\n\",\n",
+    "  chunk_size=600,\n",
+    "  chunk_overlap=100,\n",
+    ")\n",
+    "\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(\n",
+    "  embeddings, cache_dir\n",
+    ")\n",
+    "\n",
+    "vectorstore = Chroma.from_documents(docs, cached_embeddings)"
    ]
   }
  ],
