--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,11 +10,12 @@
     "from langchain.document_loaders import UnstructuredFileLoader\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
-    "from langchain.vectorstores import Chroma\n",
+    "from langchain.vectorstores import FAISS\n",
     "from langchain.storage import LocalFileStore\n",
-    "from langchain.chains import RetrievalQA\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
     "\n",
-    "llm = ChatOpenAI()\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
     "cache_dir = LocalFileStore(\"./.cache/\")\n",
     "\n",
@@ -33,53 +34,38 @@
     "  embeddings, cache_dir\n",
     ")\n",
     "\n",
-    "vectorstore = Chroma.from_documents(docs, cached_embeddings)\n",
+    "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "chain = RetrievalQA.from_chain_type(\n",
-    "  llm=llm,\n",
-    "  chain_type=\"refine\",\n",
-    "  retriever=vectorstore.as_retriever(),\n",
-    ")\n"
+    "retriever = vectorstore.as_retriever()\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You're a helpful assistant. Answer questions using only the follwing context. If you don't know about the answer just say you don't know, don't make it up:\\n{context}\"),\n",
+    "  (\"human\", \"{question}\")\n",
+    "])\n",
+    "\n",
+    "chain = {\"context\": retriever, \"question\": RunnablePassthrough()} | prompt | llm\n",
+    "\n",
+    "# stuff type chain\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Thank you for providing the additional context from George Orwell's novel 1984. Based on this context, Winston Smith lives in Victory Mansions. The flat where he resides is on the seventh floor and is described as having a hallway that smells of boiled cabbage and old rag mats. The flat has a telescreen, an oblong metal plaque on the right-hand wall that cannot be completely shut off, constantly broadcasting information. Winston's flat also has a window through which he can look out.\""
+       "AIMessage(content='Victory Mansions is a building where Winston Smith resides. It is described as having glass doors at the entrance, which allow gritty dust to enter. The hallway of Victory Mansions has a smell of boiled cabbage and old rag mats. There is a large colored poster on one end of the hallway, depicting the face of a man in his forties with a black mustache. The flat where Winston lives is located on the seventh floor, and the elevator is often out of service due to the electricity being cut off during daylight hours as part of an economy drive. The building is not well-maintained, with rotting houses and patched windows in the surrounding area.')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.run(\"Where does Winston live?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'In the dystopian world of George Orwell\\'s novel, 1984, the mention of \"Victory Gin\" and \"Victory Cigarettes\" takes on a deeper meaning. The description highlights the oppressive nature of the Ministry of Love, a place that remains inaccessible to ordinary citizens like the protagonist, Winston. The Ministry is heavily guarded with barbed-wire entanglements, steel doors, and armed guards. This strict security emphasizes the control and fear instilled by the Party.\\n\\nTo cope with his challenging existence in this grim environment, Winston turns to \"Victory Gin\" and \"Victory Cigarettes\" for temporary relief. The gin is described as a colorless liquid with a plain white label, emitting an unpleasant odor reminiscent of Chinese rice spirit. Although the taste is harsh, Winston drinks it, enduring a burning sensation similar to nitric acid. However, he experiences a temporary sense of cheerfulness afterward.\\n\\nSimilarly, the \"Victory Cigarettes\" are portrayed as of poor quality, as the tobacco easily falls out when Winston mishandles them. Despite their inferiority, he smokes them, seeking a momentary escape from the oppressive reality surrounding him.\\n\\nSymbolically, these products represent conformity and control as propagated by the Party\\'s propaganda. \"Victory Gin\" and \"Victory Cigarettes\" act as temporary distractions, offering Winston a fleeting respite from the grimness of his existence, while reinforcing the Party\\'s dominance over the lives and choices of its citizens.'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain.run(\"Please describe 'Victory Mensions'\")"
+    "chain.invoke(\"Describe Victory Mansions.\")"
    ]
   }
  ],
