--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from langchain.vectorstores import FAISS\n",
     "from langchain.storage import LocalFileStore\n",
     "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "from langchain.schema.runnable import RunnablePassthrough, RunnableLambda\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
@@ -38,34 +38,99 @@
     "\n",
     "retriever = vectorstore.as_retriever()\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You're a helpful assistant. Answer questions using only the follwing context. If you don't know about the answer just say you don't know, don't make it up:\\n{context}\"),\n",
-    "  (\"human\", \"{question}\")\n",
-    "])\n",
+    "map_doc_prompt = ChatPromptTemplate.from_messages(\n",
+    "  [\n",
+    "    (\n",
+    "      \"system\",\n",
+    "      \"\"\"\n",
+    "      Use the following portion of a long document to see if any of the text is relevant to answer the question. Return any relevant text verbatim. If there is no relevant text, return : ''\n",
+    "      -------\n",
+    "      {context}\n",
+    "      \"\"\",\n",
+    "    ),\n",
+    "    (\"human\", \"{question}\"),\n",
+    "  ]\n",
+    ")\n",
     "\n",
-    "chain = {\"context\": retriever, \"question\": RunnablePassthrough()} | prompt | llm\n",
+    "map_doc_chain = map_doc_prompt | llm\n",
     "\n",
-    "# stuff type chain\n"
+    "def map_docs(inputs):\n",
+    "  documents = inputs['documents']\n",
+    "  question = inputs['question']\n",
+    "  # results = []\n",
+    "  # for document in documents:\n",
+    "  #   result = map_doc_chain.invoke({\n",
+    "  #     \"context\": document.page_content,\n",
+    "  #     \"question\": question\n",
+    "  #   }).content\n",
+    "  #   results.append(result)\n",
+    "  # print(results)\n",
+    "  # return \"\\n\\n\".join(results)\n",
+    "  return \"\\n\\n\".join(map_doc_chain.invoke({\n",
+    "      \"context\": doc.page_content,\n",
+    "      \"question\": question\n",
+    "    }).content for doc in documents)\n",
+    "\n",
+    "map_chain = {\"documents\": retriever, \"question\" : RunnablePassthrough()} | RunnableLambda(map_docs)\n",
+    "\n",
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "  [\n",
+    "    (\n",
+    "        \"system\",\n",
+    "        \"\"\"\n",
+    "        Given the following extracted parts of a long document and a question, create a final answer. \n",
+    "        If you don't know the answer, just say that you don't know. Don't try to make up an answer.\n",
+    "        ------\n",
+    "        {context}\n",
+    "        \"\"\",\n",
+    "    ),\n",
+    "    (\"human\", \"{question}\"),\n",
+    "  ]\n",
+    ")\n",
+    "\n",
+    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough()} | final_prompt | llm\n",
+    "\n",
+    "# map reduced type chain\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Victory Mansions is a building where Winston Smith resides. It is described as having glass doors at the entrance, which allow gritty dust to enter. The hallway of Victory Mansions has a smell of boiled cabbage and old rag mats. There is a large colored poster on one end of the hallway, depicting the face of a man in his forties with a black mustache. The flat where Winston lives is located on the seventh floor, and the elevator is often out of service due to the electricity being cut off during daylight hours as part of an economy drive. The building is not well-maintained, with rotting houses and patched windows in the surrounding area.')"
+       "AIMessage(content='Victory Mansions is a building located in London, specifically in Airstrip One, which is the chief city of Oceania. It is described as a grimy landscape with rotting nineteenth-century houses. The houses are in a state of disrepair, with their sides supported by timber, windows patched with cardboard, and roofs made of corrugated iron. The garden walls are sagging in all directions. There are also bombed sites with rubble and plaster dust in the air, as well as sordid colonies of wooden dwellings resembling chicken-houses. The specific appearance of Victory Mansions is not described in detail, but it is mentioned that from its roof, one can see the other three buildings that house the Ministries of Truth, Peace, Love, and Plenty.')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chain.invoke(\"Describe Victory Mansions.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Winston goes to work at the Ministry of Truth.')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Where does Winston go to work?\")"
    ]
   }
  ],
