--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,135 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.document_loaders import UnstructuredFileLoader\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
-    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
-    "from langchain.vectorstores import FAISS\n",
-    "from langchain.storage import LocalFileStore\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.runnable import RunnablePassthrough, RunnableLambda\n",
-    "\n",
-    "llm = ChatOpenAI(temperature=0.1)\n",
-    "\n",
-    "cache_dir = LocalFileStore(\"./.cache/\")\n",
-    "\n",
-    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
-    "  separator=\"\\n\",\n",
-    "  chunk_size=600,\n",
-    "  chunk_overlap=100,\n",
-    ")\n",
-    "\n",
-    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
-    "docs = loader.load_and_split(text_splitter=splitter)\n",
-    "\n",
-    "embeddings = OpenAIEmbeddings()\n",
-    "\n",
-    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(\n",
-    "  embeddings, cache_dir\n",
-    ")\n",
-    "\n",
-    "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
-    "\n",
-    "retriever = vectorstore.as_retriever()\n",
-    "\n",
-    "map_doc_prompt = ChatPromptTemplate.from_messages(\n",
-    "  [\n",
-    "    (\n",
-    "      \"system\",\n",
-    "      \"\"\"\n",
-    "      Use the following portion of a long document to see if any of the text is relevant to answer the question. Return any relevant text verbatim. If there is no relevant text, return : ''\n",
-    "      -------\n",
-    "      {context}\n",
-    "      \"\"\",\n",
-    "    ),\n",
-    "    (\"human\", \"{question}\"),\n",
-    "  ]\n",
-    ")\n",
-    "\n",
-    "map_doc_chain = map_doc_prompt | llm\n",
-    "\n",
-    "def map_docs(inputs):\n",
-    "  documents = inputs['documents']\n",
-    "  question = inputs['question']\n",
-    "  # results = []\n",
-    "  # for document in documents:\n",
-    "  #   result = map_doc_chain.invoke({\n",
-    "  #     \"context\": document.page_content,\n",
-    "  #     \"question\": question\n",
-    "  #   }).content\n",
-    "  #   results.append(result)\n",
-    "  # print(results)\n",
-    "  # return \"\\n\\n\".join(results)\n",
-    "  return \"\\n\\n\".join(map_doc_chain.invoke({\n",
-    "      \"context\": doc.page_content,\n",
-    "      \"question\": question\n",
-    "    }).content for doc in documents)\n",
-    "\n",
-    "map_chain = {\"documents\": retriever, \"question\" : RunnablePassthrough()} | RunnableLambda(map_docs)\n",
-    "\n",
-    "final_prompt = ChatPromptTemplate.from_messages(\n",
-    "  [\n",
-    "    (\n",
-    "        \"system\",\n",
-    "        \"\"\"\n",
-    "        Given the following extracted parts of a long document and a question, create a final answer. \n",
-    "        If you don't know the answer, just say that you don't know. Don't try to make up an answer.\n",
-    "        ------\n",
-    "        {context}\n",
-    "        \"\"\",\n",
-    "    ),\n",
-    "    (\"human\", \"{question}\"),\n",
-    "  ]\n",
-    ")\n",
-    "\n",
-    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough()} | final_prompt | llm\n",
-    "\n",
-    "# map reduced type chain\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yuls/workspace/fullstack-gpt/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "AIMessage(content='Victory Mansions is a building located in London, specifically in Airstrip One, which is the chief city of Oceania. It is described as a grimy landscape with rotting nineteenth-century houses. The houses are in a state of disrepair, with their sides supported by timber, windows patched with cardboard, and roofs made of corrugated iron. The garden walls are sagging in all directions. There are also bombed sites with rubble and plaster dust in the air, as well as sordid colonies of wooden dwellings resembling chicken-houses. The specific appearance of Victory Mansions is not described in detail, but it is mentioned that from its roof, one can see the other three buildings that house the Ministries of Truth, Peace, Love, and Plenty.')"
+       "'?\\n\\nPotato is a starchy, tuberous crop from the perennial Solanum tuberosum of the Solanaceae family. The word potato may refer to the plant itself as well as the edible tuber. In the region of the Andes, there are some other closely related cultivated potato species.\\n\\nWhat is the meaning of potato in English?\\n\\nPotato is a starchy, tuberous crop from the perennial Solanum tuberosum of the Solanaceae family. The word potato may refer to the plant itself as well as the edible tuber. In the region of the Andes, there are some other closely related cultivated potato species.\\n\\nWhat is the meaning of potato in Hindi?\\n\\nPotato is a starchy, tuberous crop from the perennial Solanum tuberosum of the Solanaceae family. The word potato may refer to the plant itself as well as the edible tuber. In the region of the Andes, there are some other closely related cultivated potato species.\\n\\nWhat is the meaning of potato in Telugu?\\n'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.invoke(\"Describe Victory Mansions.\")"
+    "from langchain.llms import HuggingFaceHub\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "prompt = PromptTemplate.from_template(\"What is the meaning of {word}\")\n",
+    "\n",
+    "llm = HuggingFaceHub(\n",
+    "  repo_id=\"mistralai/Mistral-7B-v0.1\",\n",
+    "  model_kwargs={\n",
+    "    \"max_new_tokens\": 250,\n",
+    "  },\n",
+    ")\n",
+    "\n",
+    "chain = prompt | llm\n",
+    "\n",
+    "chain.invoke({\n",
+    "  \"word\": \"potato\"\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Winston goes to work at the Ministry of Truth.')"
+       "' Potato is a starchy vegetable that is grown underground in rows in a shallow, well-drained soil. It is a tuber, which means it is an underground, fleshy part of the plant that stores nutrients. Potatoes are a popular food source and are used in many different dishes, including salads, soups, stews, and baked dishes. They are also used as a source of starch for making paper and other products. Potatoes are high in carbohydrates and are a good source of fiber, vitamin C, and potassium.'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.invoke(\"Where does Winston go to work?\")"
+    "prompt = PromptTemplate.from_template(\"[INST]What is the meaning of {word}[/INST]\")\n",
+    "\n",
+    "llm = HuggingFaceHub(\n",
+    "  repo_id=\"mistralai/Mistral-7B-Instruct-v0.1\",\n",
+    "  model_kwargs={\n",
+    "    \"max_new_tokens\": 250,\n",
+    "  },\n",
+    ")\n",
+    "\n",
+    "chain = prompt | llm\n",
+    "\n",
+    "chain.invoke({\n",
+    "  \"word\": \"potato\"\n",
+    "})"
    ]
   }
  ],
