--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,46 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading config.json: 100%|██████████| 665/665 [00:00<00:00, 1.24MB/s]\n",
-      "Downloading vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 1.84MB/s]\n",
-      "Downloading merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 1.31MB/s]\n",
-      "Downloading tokenizer.json: 100%|██████████| 1.36M/1.36M [00:00<00:00, 1.88MB/s]\n",
-      "Downloading model.safetensors: 100%|██████████| 548M/548M [02:05<00:00, 4.37MB/s] \n",
-      "Downloading generation_config.json: 100%|██████████| 124/124 [00:00<00:00, 490kB/s]\n",
-      "Using pad_token, but it is not set yet.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "' very poor nutrition and so is sugar. But potatoes are still very healthy! If you want to make soup, give your kids the recipe for \"The Little Bunch of Soup.\" But the trick is to cook for all their own needs.\\n\\n'"
+       "'\\nA potato is a starchy, tuberous crop grown for its edible tuber. It is one of the most widely cultivated and consumed vegetables in the world. Potatoes are native to South America but have been domesticated and cultivated by humans for thousands of years. They are an important source of food and nutrition in many parts of the world, particularly in developing countries where they are a staple crop.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.llms.huggingface_pipeline import HuggingFacePipeline\n",
+    "from langchain.llms import GPT4All\n",
     "from langchain.prompts import PromptTemplate\n",
     "\n",
-    "prompt = PromptTemplate.from_template(\"A {word} is a\")\n",
+    "prompt = PromptTemplate.from_template(\"You are a helpful assistant that defines words. Define this word: {word}\")\n",
     "\n",
-    "llm = HuggingFacePipeline.from_model_id(\n",
-    "  model_id=\"gpt2\",\n",
-    "  task=\"text-generation\",\n",
-    "  pipeline_kwargs={\n",
-    "    \"max_new_tokens\": 50\n",
-    "  }\n",
+    "llm = GPT4All(\n",
+    "  model=\"./falcon.bin\",\n",
     ")\n",
     "\n",
     "chain = prompt | llm\n",
