--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -40,13 +40,10 @@
     "\n",
     "def transcript_chunks(chunk_path, dest):\n",
     "  files = glob.glob(f\"{chunk_path}/*.mp3\")\n",
-    "  final_transcript = \"\"\n",
     "  for file in files:\n",
-    "    with open(file, \"rb\") as audio_file:\n",
+    "    with open(file, \"rb\") as audio_file, open(dest, \"a\") as text_file:\n",
     "      transcript = openai.Audio.transcribe(\"whisper-1\", audio_file)\n",
-    "      final_transcript += transcript[\"text\"]\n",
-    "  with open(dest, \"w\") as file:\n",
-    "    file.write(final_transcript)\n",
+    "      text_file.write(transcript[\"text\"])\n",
     "\n",
     "transcript_chunks(\"./files/chunks\", \"./files/transcript.txt\")"
    ]
